--- a/XXLMod3/XXLMod3.csproj
+++ b/XXLMod3/XXLMod3.csproj
@@ -90,6 +90,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.RenderPipelines.HighDefinition.Runtime, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Desktop\Skater XL 1.1\SkaterXL_Data\Managed\Unity.RenderPipelines.HighDefinition.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Skater XL\SkaterXL_Data\Managed\Unity.TextMeshPro.dll</HintPath>
@@ -142,7 +146,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssetBundleHelper.cs" />
+    <Compile Include="Helper\AssetBundleHelper.cs" />
     <Compile Include="Controller\StanceController.cs" />
     <Compile Include="Core\Enums\GrabOffBoardStanceTab.cs" />
     <Compile Include="Core\Enums\GrabStanceTab.cs" />
@@ -166,7 +170,9 @@
     <Compile Include="Core\Enums\OneFootGrabMode.cs" />
     <Compile Include="Core\Enums\OneFootMode.cs" />
     <Compile Include="Core\Enums\PopOutDirection.cs" />
-    <Compile Include="Core\Extentions.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="Patches\IKController_\SetIKLerpSpeedPatch.cs" />
+    <Compile Include="Utilities\Utils.cs" />
     <Compile Include="Core\Grinds\CustomGrindSettings.cs" />
     <Compile Include="Core\Legs\BaseLegSettings.cs" />
     <Compile Include="Core\Legs\CustomLegSettings.cs" />
@@ -176,6 +182,7 @@
     <Compile Include="Core\Stances\CustomStanceSettings.cs" />
     <Compile Include="Core\Stances\SaveStance.cs" />
     <Compile Include="Core\Stats\SaveStats.cs" />
+    <Compile Include="Helper\StanceHelper.cs" />
     <Compile Include="Patches\BoardController_\AddPumpForcePatch.cs" />
     <Compile Include="Patches\BoardController_\CatchRotationFloatPatch.cs" />
     <Compile Include="Patches\BoardController_\CatchRotationPatch.cs" />
@@ -235,7 +242,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="Patches\PlayerStateMachine_\SetupDefinitionPatch.cs" />
     <Compile Include="Patches\PlayerState_OnBoard_\OnBailedPatch.cs" />
-    <Compile Include="PresetHelper.cs" />
+    <Compile Include="Helper\PresetHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RapidGUI\Button.cs" />
     <Compile Include="RapidGUI\Field.cs" />
@@ -261,8 +268,8 @@
     <Compile Include="RapidGUI\Utilities\WarningLabelNoStyle.cs" />
     <Compile Include="RapidGUI\Utilities\WindowInvoker.cs" />
     <Compile Include="ObjectTracker.cs" />
-    <Compile Include="SerializableQuaternion.cs" />
-    <Compile Include="SerializableVector3.cs" />
+    <Compile Include="Utilities\SerializableQuaternion.cs" />
+    <Compile Include="Utilities\SerializableVector3.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Windows\BailUI.cs" />
     <Compile Include="Windows\CatchUI.cs" />
@@ -280,6 +287,7 @@
     <Compile Include="Windows\MiscUI.cs" />
     <Compile Include="Windows\MultiplayerUI.cs" />
     <Compile Include="Windows\OtherUI.cs" />
+    <Compile Include="Windows\PowerslideUI.cs" />
     <Compile Include="Windows\PresetUI.cs" />
     <Compile Include="Windows\PrimoUI.cs" />
     <Compile Include="Windows\StanceUI.cs" />
